--- a/index.html
+++ b/index.html
@@ -26,12 +26,7 @@
     <br>
     
 <img src="./assets/Princess Peach Presenting.png" alt="Princess Peach"></img>
-    <button id="Click">Click here to Begin!</button>
- 
-
-
-
-
+    <a href="game.html"><button id="Click">Click here to Begin!</button>
 </body>
 <footer>
 
