--- a/game.html
+++ b/game.html
@@ -5,20 +5,26 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="" />
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
   <h2>Try to get as many cupcakes as you can before time runs out!!</h2>
-   <img src="./assets/CuteCloud.png"></img>
-   <img src="./assets/CuteCloud.png"></img>
-   <img src="./assets/CuteCloud.png"></img>
-   <img src="./assets/CuteCloud.png"></img>
-   <img src="./assets/CuteCloud.png"></img>
+   <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
+   <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
+   <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
+   <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
+   <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
+   <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
+ 
+   <div class = "grid"></div>
    <br>
    <br>
-    <img class= "PrincessPeach" src="./assets/Princess Peach Presenting.png" alt="PrincessPeach"></img>
-    <script src="game.js"></script>
+   <br>
+   <hr>
+    <img class= "PrincessPeach" src="./assets/images/Princess Peach Presenting.png" alt="PrincessPeach"></img>
+    <script src="./assets/js/game.js"></script>
    
     <br>
 
+    
 
