--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="" />
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
   <h1>Welcome to Cupcake Fantasy!!!</h1>
 </head>
 <body>
  
   <h2>Directions:Try to get as many cupcakes as you can before time runs out!!</h2>
-    <img src="./assets/R.png"></img>
+    <img src="./assets/images/R.png"></img>
     <h3>
       <p>
         Hello! The goal is to collect as many cupcakes as possible to save Peach's bakery. Peach was delivering goods around the neighborshood one day when it suddenly started raining cupcakes straight from the sky!! 
@@ -25,13 +25,12 @@
     </h3>
     <br>
     
-<img src="./assets/Princess Peach Presenting.png" alt="Princess Peach"></img>
+<img src="./assets/images/Princess Peach Presenting.png" alt="Princess Peach"></img>
     <a href="game.html"><button id="Click">Click here to Begin!</button>
 </body>
 <footer>
 
 </footer>
-<script src ="newPlayableCharacter.js"></script>
-<script src ="script.js"></script>
+<script src ="./assets/js/script.js"></script>
 
 </html>
