--- a/game.html
+++ b/game.html
@@ -8,23 +8,28 @@
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-  <h2>Try to get as many cupcakes as you can before time runs out!!</h2>
    <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
    <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
    <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
    <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
    <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
    <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
- 
-   <div class = "grid"></div>
-   <br>
-   <br>
+  
+   
+   <div class = "grid">
+   </div>
+   <div class ="blankimage"></div>
+    <div class="cupcake"></div>
+    <div class ="picture"></div>
+  
+   
    <br>
    <hr>
     <img class= "PrincessPeach" src="./assets/images/Princess Peach Presenting.png" alt="PrincessPeach"></img>
     <script src="./assets/js/game.js"></script>
    
     <br>
-
+</body>
+</html>
     
 
