--- a/index.html
+++ b/index.html
@@ -22,11 +22,16 @@
         then enough money can be made to save Peach's bakery! If you are unable to to catch all 50 in a row within 2 minutes, 
         then the game will end and the task is not completed.
       </p>
+      <p>
+        Peach:"Try to get as many cupcakes before time runs out!""
+      </p>
     </h3>
     <br>
-    
 <img src="./assets/images/Princess Peach Presenting.png" alt="Princess Peach"></img>
-    <a href="game.html"><button id="Click">Click here to Begin!</button>
+    <a href="game.html"><button id="Click">Click here to Begin!</button></a>
+      <h4>
+      Peach:"Try to get as many cupcakes before time runs out!""
+      </h4>
 </body>
 <footer>
 
