--- a/game.html
+++ b/game.html
@@ -4,7 +4,7 @@
   <title>Hello, world!</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="" />
+  <meta name="description" content="gttgg" />
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
@@ -16,16 +16,14 @@
    <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
   
    
-   <div class = "grid">
-   </div>
+   <div class ="grid"></div>
+   <h1 class ="results">0</h1>
    <div class ="blankimage"></div>
     <div class="cupcake"></div>
     <div class ="picture"></div>
-  
-   
    <br>
    <hr>
-    <img class= "PrincessPeach" src="./assets/images/Princess Peach Presenting.png" alt="PrincessPeach"></img>
+    <img class= "PrincessPeach" src="./assets/images/PrincessPeachPresenting.png" alt="PrincessPeach"></img>
     <script src="./assets/js/game.js"></script>
    
     <br>
