--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </p>
     </h3>
     <br>
-<img src="./assets/images/Princess Peach Presenting.png" alt="Princess Peach"></img>
+<img src="./assets/images/PrincessPeachPresenting.png" alt="Princess Peach"></img>
     <a href="game.html"><button id="Click">Click here to Begin!</button></a>
       <h4>
       Peach:"Try to get as many cupcakes before time runs out!""
