--- a/game.html
+++ b/game.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<canvas id="canvas">
 <head>
-  <title>Hello, world!</title>
+  <title>Cupcake Fantasy Game Page</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="gttgg" />
@@ -16,6 +16,7 @@
    <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
   
    
+
    <div class ="grid"></div>
    <h1 class ="results">0</h1>
    <div class ="blankimage"></div>
@@ -24,10 +25,11 @@
    <br>
    <hr>
     <img class= "PrincessPeach" src="./assets/images/PrincessPeachPresenting.png" alt="PrincessPeach"></img>
-    <script src="./assets/js/game.js"></script>
-   
+     <script src="./assets/js/game.js"></script>
+    
     <br>
 </body>
+</canvas>
 </html>
     
 
