--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Hello, world!</title>
+  <title>Cupcake Fantasy Intro Page</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="" />
@@ -27,14 +27,19 @@
       </p>
     </h3>
     <br>
-<img src="./assets/images/PrincessPeachPresenting.png" alt="Princess Peach"></img>
+<!-- <img src="./assets/images/PrincessPeachPresenting.png" alt="Princess Peach"></img>
     <a href="game.html"><button id="Click">Click here to Begin!</button></a>
       <h4>
-      Peach:"Try to get as many cupcakes before time runs out!""
-      </h4>
+      Peach:"Try to get as many cupcakes before time runs out!"
+      </h4> -->
 </body>
-<footer>
 
+<footer>
+  <img src="./assets/images/PrincessPeachPresenting.png" alt="Princess Peach"></img>
+  <a href="game.html"><button id="Click">Click here to Begin!</button></a>
+    <h4>
+    Peach:"Try to get as many cupcakes before time runs out!"
+    </h4>
 </footer>
 <script src ="./assets/js/script.js"></script>
 
