--- a/game.html
+++ b/game.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<canvas id="canvas">
 <head>
   <title>Cupcake Fantasy Game Page</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content="gttgg" />
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <meta name="description" content="game"/>
+  <link rel="stylesheet" href="./assets/css/style.css"/>
 </head>
+<h1 class ="timer">2:00</h1>
+<h2 class="results">0</div>
+  <hr>
 <body>
    <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
    <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
@@ -14,22 +16,15 @@
    <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
    <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
    <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
-  
-   
-
-   <div class ="grid"></div>
-   <h1 class ="results">0</h1>
-   <div class ="blankimage"></div>
-    <div class="cupcake"></div>
+   <div class ="grid">
+     <div class = "squares"></div>
     <div class ="picture"></div>
-   <br>
-   <hr>
-    <img class= "PrincessPeach" src="./assets/images/PrincessPeachPresenting.png" alt="PrincessPeach"></img>
-     <script src="./assets/js/game.js"></script>
-    
-    <br>
+    </div>
+    <div class="PrincessPeach"><img class= "PrincessPeach" src="./assets/images/PrincessPeachPresenting.png" alt="PrincessPeach"></img></div>
 </body>
-</canvas>
+<footer>
+  <script src="./assets/js/game.js"></script>
+  </footer>
 </html>
     
 
