--- a/game.html
+++ b/game.html
@@ -4,26 +4,36 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="game"/>
-  <link rel="stylesheet" href="./assets/css/style.css"/>
+  <link rel="stylesheet" href="./assets/css/gamestyle.css"/>
 </head>
-<h1 class ="timer">2:00</h1>
+<h1 id ="timer">2:00</h1>
 <h2 class="results">0</div>
+  <h4>"Control the floating glass box to move Peach in order to catch all of the falling cupcakes!</h4>
   <hr>
-<body>
    <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
    <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
    <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
    <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
    <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
    <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
-   <div class ="grid">
-     <div class = "squares"></div>
-    <div class ="picture"></div>
-    </div>
-    <div class="PrincessPeach"><img class= "PrincessPeach" src="./assets/images/PrincessPeachPresenting.png" alt="PrincessPeach"></img></div>
-</body>
+   <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
+
+
+   <body onload="startGame()">
+  
+  </body>
+   <div class="grid"></div>
+
+    <div class="PrincessPeach"><img class= "PrincessPeach" src="./assets/images/PrincessPeach Cute.jpg" alt="PrincessPeach"></img></div>
+    <!-- <audio src="">
+
+    </audio> -->
+  </body>
+  
 <footer>
   <script src="./assets/js/game.js"></script>
+  <script src="./assets/js/gravity.js"></script>
+  <script src="./assets/js/timerCountDown.js"></script>
   </footer>
 </html>
     
