--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="" />
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/indexStyle.css">
   <h1>Welcome to Cupcake Fantasy!!!</h1>
 </head>
 <body>
  
   <h2>Directions:Try to get as many cupcakes as you can before time runs out!!</h2>
-    <img src="./assets/images/R.png"></img>
     <h3>
       <p>
         Hello! The goal is to collect as many cupcakes as possible to save Peach's bakery. Peach was delivering goods around the neighborshood one day when it suddenly started raining cupcakes straight from the sky!! 
@@ -23,24 +22,19 @@
         then the game will end and the task is not completed.
       </p>
       <p>
-        Peach:"Try to get as many cupcakes before time runs out!""
+        Peach:"Try to get as many cupcakes before time runs out!"
       </p>
     </h3>
     <br>
-<!-- <img src="./assets/images/PrincessPeachPresenting.png" alt="Princess Peach"></img>
-    <a href="game.html"><button id="Click">Click here to Begin!</button></a>
-      <h4>
-      Peach:"Try to get as many cupcakes before time runs out!"
-      </h4> -->
-</body>
 
-<footer>
-  <img src="./assets/images/PrincessPeachPresenting.png" alt="Princess Peach"></img>
+  <img class= "PeachPresenting" src="./assets/images/PrincessPeachPresenting.png" alt="Princess Peach"></img>
   <a href="game.html"><button id="Click">Click here to Begin!</button></a>
     <h4>
     Peach:"Try to get as many cupcakes before time runs out!"
     </h4>
-</footer>
+  </body>
+  
 <script src ="./assets/js/script.js"></script>
+
 
 </html>
