https://github.com/Phalguni221/FInal-1st-Unit/tree/JS-Branch

--- a/game.html
+++ b/game.html
@@ -6,8 +6,11 @@
   <meta name="description" content="game"/>
   <link rel="stylesheet" href="./assets/css/gamestyle.css"/>
 </head>
+
 <h1 id ="timer">2:00</h1>
 <h2 class="results">0</div>
+
+
   <h4>"Control the floating glass box to move Peach in order to catch all of the falling cupcakes!</h4>
   <hr>
    <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
@@ -17,13 +20,15 @@
    <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
    <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
    <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
+   <br>
+   <br>
+   <body>
+ 
+  <div class="grid">
+  </div>
 
-
-   <body onload="startGame()">
-  
   </body>
-   <div class="grid"></div>
-
+  
     <div class="PrincessPeach"><img class= "PrincessPeach" src="./assets/images/PrincessPeach Cute.jpg" alt="PrincessPeach"></img></div>
     <!-- <audio src="">
 
@@ -32,7 +37,7 @@
   
 <footer>
   <script src="./assets/js/game.js"></script>
-  <script src="./assets/js/gravity.js"></script>
+  <script src="./assets/js/gameboard.js"></script>
   <script src="./assets/js/timerCountDown.js"></script>
   </footer>
 </html>
