--- a/game.html
+++ b/game.html
@@ -14,18 +14,13 @@
   <h4>"Control the floating glass box to move Peach in order to catch all of the falling cupcakes!</h4>
   <hr>
    <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
-   <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
-   <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
-   <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
-   <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
-   <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
-   <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
    <br>
    <br>
+   
    <body>
  
-  <div class="grid">
-  </div>
+  <div class="grid"></div>
+  
 
   </body>
   
@@ -39,6 +34,8 @@
   <script src="./assets/js/game.js"></script>
   <script src="./assets/js/gameboard.js"></script>
   <script src="./assets/js/timerCountDown.js"></script>
+
+  <div class="grass"></div>
   </footer>
 </html>
     
