--- a/game.html
+++ b/game.html
@@ -7,24 +7,30 @@
   <link rel="stylesheet" href="./assets/css/gamestyle.css"/>
 </head>
 
-<h1 id ="timer">2:00</h1>
+<h1 id ="timer">00</h1>
 <h2 class="results">0</div>
+  <h2>"Click the Start button below to begin!"</h2>
+  <button onclick='startStopTimer()'>Start</button>
+  <button onclick='startResetTimer()'>Reset</button>
 
 
   <h4>"Control the floating glass box to move Peach in order to catch all of the falling cupcakes!</h4>
   <hr>
-   <img class="CuteCloud" src="./assets/images/CuteCloud.png"></img>
+   <img class="CuteCloud" id="cloudImage" src="./assets/images/CuteCloud.png"></img>
+   <img class="CuteCloud" id="cloudImage" src="./assets/images/CuteCloud.png"></img>
+   <img class="CuteCloud" id="cloudImage" src="./assets/images/CuteCloud.png"></img>
+   <img class="CuteCloud" id="cloudImage" src="./assets/images/CuteCloud.png"></img>
+   <img class="CuteCloud" id="cloudImage" src="./assets/images/CuteCloud.png"></img>  
+   <img class="CuteCloud" id="cloudImage" src="./assets/images/CuteCloud.png"></img>
    <br>
    <br>
    
    <body>
  
   <div class="grid"></div>
-  
 
-  </body>
   
-    <div class="PrincessPeach"><img class= "PrincessPeach" src="./assets/images/PrincessPeach Cute.jpg" alt="PrincessPeach"></img></div>
+    <div class="PrincessPeachCute"><img class= "PrincessPeachCute" src="./assets/images/PrincessPeachCute.jpg" alt="PrincessPeach"></img></div>
     <!-- <audio src="">
 
     </audio> -->
