--- a/game.html
+++ b/game.html
@@ -11,7 +11,7 @@
 <h2 class="results">0</div>
   <h2>"Click the Start button below to begin!"</h2>
   <button onclick='startStopTimer()'>Start</button>
-  <button onclick='startResetTimer()'>Reset</button>
+
 
 
   <h4>"Control the floating glass box to move Peach in order to catch all of the falling cupcakes!</h4>
@@ -20,7 +20,7 @@
    <img class="CuteCloud" id="cloudImage" src="./assets/images/CuteCloud.png"></img>
    <img class="CuteCloud" id="cloudImage" src="./assets/images/CuteCloud.png"></img>
    <img class="CuteCloud" id="cloudImage" src="./assets/images/CuteCloud.png"></img>
-   <img class="CuteCloud" id="cloudImage" src="./assets/images/CuteCloud.png"></img>  
+   <img class="CuteCloud" id="cloudImage" src="./assets/images/CuteCloud.png"></img>
    <img class="CuteCloud" id="cloudImage" src="./assets/images/CuteCloud.png"></img>
    <br>
    <br>
@@ -30,7 +30,7 @@
   <div class="grid"></div>
 
   
-    <div class="PrincessPeachCute"><img class= "PrincessPeachCute" src="./assets/images/PrincessPeachCute.jpg" alt="PrincessPeach"></img></div>
+    <div><img class= "PrincessPeachCute" src="./assets/images/PrincessPeachCute.jpg" alt="PrincessPeach"></img></div>
     <!-- <audio src="">
 
     </audio> -->
