--- a/scoreboard.html
+++ b/scoreboard.html
@@ -5,11 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="scores" />
-  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/scoreboardstyle.css">
   <h1>Well Done!!</h1>
   <h2>Scoreboard Results</h2>
   <div>
-  <img src="assets/images/Congratulating Peach.jfif" alt="Congratulating Peach"/>
+  <img src="assets/images/PrincessPeachPresenting.png" alt="Congratulating Peach"/>
   <p>"Way to Go!"</p>
   <div>
     <!-- <div>
