--- a/game.html
+++ b/game.html
@@ -2,20 +2,19 @@
 <head>
   <title>Cupcake Fantasy Game Page</title>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <meta name="description" content="game"/>
+  <meta http-equiv="refresh" content="120">
   <link rel="stylesheet" href="./assets/css/gamestyle.css"/>
+  <iframe src="https://www.youtube.com/embed/3ijDdxmoiX0?autoplay=1" width="560" height="315" title="YouTube video player" 
+  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </head>
 
-<h1 id ="timer">00</h1>
+<h1 id ="demo">00:00</h1>
+<a href=""><h3>Reset Button</h3></a>
 <h2 class="results">0</div>
-  <h2>"Click the Start button below to begin!"</h2>
-  <button onclick='startStopTimer()'>Start</button>
-
-
 
   <h4>"Control the floating glass box to move Peach in order to catch all of the falling cupcakes!</h4>
-  <hr>
    <img class="CuteCloud" id="cloudImage" src="./assets/images/CuteCloud.png"></img>
    <img class="CuteCloud" id="cloudImage" src="./assets/images/CuteCloud.png"></img>
    <img class="CuteCloud" id="cloudImage" src="./assets/images/CuteCloud.png"></img>
@@ -26,22 +25,19 @@
    <br>
    
    <body>
+
  
   <div class="grid"></div>
 
   
     <div><img class= "PrincessPeachCute" src="./assets/images/PrincessPeachCute.jpg" alt="PrincessPeach"></img></div>
-    <!-- <audio src="">
-
-    </audio> -->
+    <div class="grass"></div>
   </body>
   
 <footer>
   <script src="./assets/js/game.js"></script>
   <script src="./assets/js/gameboard.js"></script>
   <script src="./assets/js/timerCountDown.js"></script>
-
-  <div class="grass"></div>
   </footer>
 </html>
     
