--- a/game.html
+++ b/game.html
@@ -31,9 +31,8 @@
   </body>
   
 <footer>
-  <script src="./assets/js/canvas.js"></script>
+  <script src="./assets/js/collision.js"></script>
   <script src="./assets/js/game.js"></script>
-  <script src="./assets/js/gameboard.js"></script>
   <script src="./assets/js/timerCountDown.js"></script>
   </footer>
 </html>
