--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         Hello! The goal is to collect as many cupcakes as possible to save Peach's bakery. Peach was delivering goods around the neighborhood one day when it suddenly started raining cupcakes straight from the sky!! 
         It seems as if Peach decided that collecting the cupcakes was a good way to make money and save the bakery!! Howevver, the main catch is to catch as many cupcakes as you can 
          without letting them fall to the ground. 
-        All the collected cupcakes will be sold that night at Mario's birthday party!! Catch as many as you can to save Peach's bakery!!
+        All the collected cupcakes will be sold that night at Mario's birthday party!! However, the party starts soon!!
+         Catch as many cupcakes as you can within 2 minutes in order to reach the party on time!! 
       </p>
       <p>
         Peach:"Try to get as many cupcakes before time runs out!"
