--- a/game.html
+++ b/game.html
@@ -6,15 +6,19 @@
   <meta name="description" content="game"/>
   <meta http-equiv="refresh" content="120">
   <link rel="stylesheet" href="./assets/css/gamestyle.css"/>
-  <iframe src="https://www.youtube.com/embed/3ijDdxmoiX0?autoplay=1" width="560" height="315" title="YouTube video player" 
+  <a href="https://cupcake-fantasy.netlify.app"><h3>Back to instructions</h3></a> 
+  <br>
+  <iframe class src="https://www.youtube.com/embed/3ijDdxmoiX0?autoplay=1" width="560" height="315" title="YouTube video player" 
   frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</head>
-
+  </head>
+  
 <h1 id ="demo">00:00</h1>
 <a href=""><h3>Reset Button</h3></a>
-<h2 class="results">0</div>
+<h2 class="score">0</div>
+
 
   <h4>"Control the floating glass box to move Peach in order to catch all of the falling cupcakes!</h4>
+   <img class="CuteCloud" id="cloudImage" src="./assets/images/CuteCloud.png"></img>
    <img class="CuteCloud" id="cloudImage" src="./assets/images/CuteCloud.png"></img>
    <img class="CuteCloud" id="cloudImage" src="./assets/images/CuteCloud.png"></img>
    <img class="CuteCloud" id="cloudImage" src="./assets/images/CuteCloud.png"></img>
@@ -32,6 +36,7 @@
   
 <footer>
   <script src="./assets/js/collision.js"></script>
+  <script src="./assets/js/phaser-collision.js"></script>
   <script src="./assets/js/game.js"></script>
   <script src="./assets/js/timerCountDown.js"></script>
   </footer>
