Added Website Name

--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
   <meta name="description" content="game"/>
   <meta http-equiv="refresh" content="120">
   <link rel="stylesheet" href="./assets/css/gamestyle.css"/>
-  <a href=""><h3>Back to instructions</h3></a> 
+  <a href="https://cupcake-fantasy.netlify.app/"><h3>Back to instructions</h3></a> 
   <br>
   <iframe class src="https://www.youtube.com/embed/3ijDdxmoiX0?autoplay=1" width="560" height="315" title="YouTube video player" 
   frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
