--- a/game.html
+++ b/game.html
@@ -6,15 +6,19 @@
   <meta name="description" content="game"/>
   <meta http-equiv="refresh" content="120">
   <link rel="stylesheet" href="./assets/css/gamestyle.css"/>
-  <a href="https://cupcake-fantasy.netlify.app/"><h3>Back to instructions</h3></a> 
+  <a href="index.html"><h3>Back to instructions</h3></a> 
   <br>
-  <iframe class src="https://www.youtube.com/embed/3ijDdxmoiX0?autoplay=1" width="560" height="315" title="YouTube video player" 
-  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <!-- <iframe class src="https://www.youtube.com/embed/3ijDdxmoiX0?autoplay=1" width="560" height="315" title="YouTube video player" 
+  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
   </head>
-  
+<!-- 
+ <button id ="prevent">Prevent Scroll</button> 
+ <button id ="allow">Allow Scroll</button> -->
+
+ 
 <h1 id ="demo">00:00</h1>
-<a href=""><h3>Reset Button</h3></a>
-<h2 class="score">0</div>
+<!-- <a href=""><h3>Reset Button</h3></a>
+<h2 class="score">0</div> -->
 
 
   <h4>"Control the floating glass box to move Peach in order to catch all of the falling cupcakes!</h4>
@@ -35,6 +39,7 @@
   </body>
   
 <footer>
+  <script src="./assets/js/scroll.js"></script>
   <script src="./assets/js/collision.js"></script>
   <script src="./assets/js/phaser-collision.js"></script>
   <script src="./assets/js/game.js"></script>
