Fixed the buttons and the scores

--- a/game.html
+++ b/game.html
@@ -6,8 +6,8 @@
   <meta name="description" content="game"/>
   <meta http-equiv="refresh" content="120">
   <link rel="stylesheet" href="./assets/css/gamestyle.css"/>
-  <a href="index.html"><h3>Back to instructions</h3></a> 
-  <br>
+  <a href="index.html">
+
   <!-- <iframe class src="https://www.youtube.com/embed/3ijDdxmoiX0?autoplay=1" width="560" height="315" title="YouTube video player" 
   frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
   </head>
@@ -15,10 +15,12 @@
  <button id ="prevent">Prevent Scroll</button> 
  <button id ="allow">Allow Scroll</button> -->
 
- 
+ <table>
 <h1 id ="demo">00:00</h1>
-<!-- <a href=""><h3>Reset Button</h3></a>
-<h2 class="score">0</div> -->
+
+<!-- <a href=""><h3>Reset Button</h3></a> -->
+<h1>0</h1>
+</table> 
 
 
   <h4>"Control the floating glass box to move Peach in order to catch all of the falling cupcakes!</h4>
@@ -29,14 +31,42 @@
    <img class="CuteCloud" id="cloudImage" src="./assets/images/CuteCloud.png"></img>
    <img class="CuteCloud" id="cloudImage" src="./assets/images/CuteCloud.png"></img>
    <img class="CuteCloud" id="cloudImage" src="./assets/images/CuteCloud.png"></img>
+
    <br>
    <br>
    
    <body>
     <div class="grid"></div>
  <div><img class= "PrincessPeachCute" src="./assets/images/PrincessPeachCute.jpg" alt="PrincessPeach"></img></div>
-    <div class="grass"></div>
+    <div class="grass">
+      <br/>
+      <br/>
+    <table>
+      <tr>
+        <br/>
+       <td>
+     <button><h3>Back to instructions</h3></button></a> 
+       </td>
+       <td>
+   <a href=""><button><h3>Reset Button</h3></button></h3></a>
+       </td>
+     </tr>
+ </table> 
+</div>
   </body>
+  <br/>
+  <br/>
+     <table>
+     <tr>
+      <td>
+    <button><h3>Back to instructions</h3></button></a> 
+      </td>
+
+      <td>
+  <a href=""><button><h3>Reset Button</h3></button></h3></a>
+      </td>
+    </tr>
+</table> 
   
 <footer>
   <script src="./assets/js/scroll.js"></script>
