--- a/game.html
+++ b/game.html
@@ -6,20 +6,26 @@
   <meta name="description" content="game"/>
   <meta http-equiv="refresh" content="120">
   <link rel="stylesheet" href="./assets/css/gamestyle.css"/>
-  <a href="index.html">
+  <a href="index.html"></a>
 
   <!-- <iframe class src="https://www.youtube.com/embed/3ijDdxmoiX0?autoplay=1" width="560" height="315" title="YouTube video player" 
-  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-  </head>
+  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </head> -->
 <!-- 
  <button id ="prevent">Prevent Scroll</button> 
  <button id ="allow">Allow Scroll</button> -->
 
  <table>
+  <tr>
 <h1 id ="demo">00:00</h1>
-
-<!-- <a href=""><h3>Reset Button</h3></a> -->
 <h1>0</h1>
+</tr>
+
+<tr>
+<h1><iframe class src="https://www.youtube.com/embed/3ijDdxmoiX0?autoplay=1" width="200" height="205" title="YouTube video player" 
+  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</h1>
+</tr>
 </table> 
 
 
