--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <br>
 
   <img class= "PeachPresenting" src="./assets/images/PrincessPeachPresenting.png" alt="Princess Peach"></img>
-  <a href="game.html"><button id="Click">Click here to Begin!</button></a>
+  <a href="game.html"><button>Click here to Begin!</button></a>
     <h4>
     Peach:"Try to get as many cupcakes before time runs out!"
     </h4>
