--- a/game.html
+++ b/game.html
@@ -16,20 +16,26 @@
  <button id ="allow">Allow Scroll</button> -->
 
  <table>
-  <tr>
+<tr>
 <h1 id ="demo">00:00</h1>
 <h1>0</h1>
 </tr>
-
-<tr>
-<h1><iframe class src="https://www.youtube.com/embed/3ijDdxmoiX0?autoplay=1" width="200" height="205" title="YouTube video player" 
+</table>
+<br>
+<br/>
+<br/>
+<table>
+  <tr>
+<h1><iframe class src="https://www.youtube.com/embed/3ijDdxmoiX0?autoplay=1" width="250" height="205" title="YouTube video player" 
   frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </h1>
 </tr>
 </table> 
 
 
-  <h4>"Control the floating glass box to move Peach in order to catch all of the falling cupcakes!</h4>
+
+  <h4>"Control the floating glass box to move Peach in order to catch all of the falling cupcakes! <br>
+    Don't let them touch the ground!</h4>
    <img class="CuteCloud" id="cloudImage" src="./assets/images/CuteCloud.png"></img>
    <img class="CuteCloud" id="cloudImage" src="./assets/images/CuteCloud.png"></img>
    <img class="CuteCloud" id="cloudImage" src="./assets/images/CuteCloud.png"></img>
@@ -49,7 +55,6 @@
       <br/>
     <table>
       <tr>
-        <br/>
        <td>
      <button><h3>Back to instructions</h3></button></a> 
        </td>
