Fixed buttons and index.html page

--- a/game.html
+++ b/game.html
@@ -34,7 +34,7 @@
 
 
 
-  <h4>"Control the floating glass box to move Peach in order to catch all of the falling cupcakes! <br>
+  <h4>Control the floating glass box to move Peach in order to catch all of the falling cupcakes! <br>
     Don't let them touch the ground!</h4>
    <img class="CuteCloud" id="cloudImage" src="./assets/images/CuteCloud.png"></img>
    <img class="CuteCloud" id="cloudImage" src="./assets/images/CuteCloud.png"></img>
@@ -52,14 +52,17 @@
  <div><img class= "PrincessPeachCute" src="./assets/images/PrincessPeachCute.jpg" alt="PrincessPeach"></img></div>
     <div class="grass">
       <br/>
-      <br/>
     <table>
       <tr>
        <td>
-     <button><h3>Back to instructions</h3></button></a> 
+        <a href ="index.html"><h3><button>Back to Instructions</button></h3></a>
+        <div></div>
        </td>
+       <!-- <div></div>
+       <div></div> -->
        <td>
-   <a href=""><button><h3>Reset Button</h3></button></h3></a>
+        <div></div>
+   <a href=""><h3><button>Reset Button</button></h3></a>
        </td>
      </tr>
  </table> 
@@ -70,11 +73,7 @@
      <table>
      <tr>
       <td>
-    <button><h3>Back to instructions</h3></button></a> 
-      </td>
-
-      <td>
-  <a href=""><button><h3>Reset Button</h3></button></h3></a>
+    <a href ="index.html"><h3><button>Back to Instructions</button></h3></a>
       </td>
     </tr>
 </table> 
@@ -87,6 +86,3 @@
   <script src="./assets/js/timerCountDown.js"></script>
   </footer>
 </html>
- 
-    
-
