--- a/index.html
+++ b/index.html
@@ -14,22 +14,33 @@
     <h3>
       <p>
         Hello! The goal is to collect as many cupcakes as possible to save Peach's bakery. Peach was delivering goods around the neighborhood one day when it suddenly started raining cupcakes straight from the sky!! 
-        It seems as if Peach decided that collecting the cupcakes was a good way to make money and save the bakery!! Howevver, the main catch is to catch as many cupcakes as you can 
+        It seems as if Peach decided that collecting the cupcakes was a good way to make money and save the bakery!! 
+        However, the main catch is to catch as many cupcakes as you can 
          without letting them fall to the ground. 
-        All the collected cupcakes will be sold that night at Mario's birthday party!! However, the party starts soon!!
+        All the collected cupcakes will be sold that night at Mario's birthday party!! Hurry, the party starts soon!!
          Catch as many cupcakes as you can within 2 minutes in order to reach the party on time!! 
       </p>
       <p>
         Peach:"Try to get as many cupcakes before time runs out!"
       </p>
-    </h3>
-    <br>
+      <p>
+      <img class= "PeachPresenting" src="./assets/images/PrincessPeachPresenting.png" alt="Princess Peach"></img>
+      </p>
+      </h3>
+      <img>
+      <a href="game.html"><button>Click here to Begin!</button></a>
+    </img>
+  
 
-  <img class= "PeachPresenting" src="./assets/images/PrincessPeachPresenting.png" alt="Princess Peach"></img>
-  <a href="game.html"><button>Click here to Begin!</button></a>
+    <!-- <br>
+
+  <img class= "PeachPresenting" src="./assets/images/PrincessPeachPresenting.png" alt="Princess Peach">
+  <a href="game.html"><h3></h3><button>Click here to Begin!</button></a>
+</img>
+
     <h4>
     Peach:"Try to get as many cupcakes before time runs out!"
-    </h4>
+    </h4> -->
   </body>
 
 
