Improved image border

--- a/game.html
+++ b/game.html
@@ -49,9 +49,9 @@
    
    <body>
     <div class="grid"></div>
- <div><img class= "PrincessPeachCute" src="./assets/images/PrincessPeachCute.jpg" alt="PrincessPeach"></img></div>
+ <div><image class= "PrincessPeachCute" src="./assets/images/PrincessPeachCute.jpg" alt="PrincessPeach"></image></div>
     <div class="grass">
-      <br/>
+    
     <table>
       <tr>
        <td>
