--- a/game.html
+++ b/game.html
@@ -67,16 +67,16 @@
       <td>
    <h3>
 
-    <button onclick="Buttontoggle()" id="playButton" type="button" class="btn btn-default btn-xs">
+    <a href=""><button onclick="Buttontoggle()" id="playButton" type="button" class="btn btn-default btn-xs">
         Play
         <span class="glyphicon glyphicon-pause"></span>
         <!-- <span class="glyphicon glyphicon-play"></span> -->
-    </button>
+      </button></a>
 
-    <button onclick="Buttontoggle()" id="playButton" type="Button" class="btn btn-default btn-xs">
+    <a href=""><button onclick="Buttontoggle()" id="playButton" type="Button" class="btn btn-default btn-xs">
       Pause
         <span class="glyphicon glyphicon-pause"></span>
-    </button>
+      </button></a>
 
   </h3>
        </td>
