--- a/game.html
+++ b/game.html
@@ -45,7 +45,7 @@
 
 
    <body>
-    <grid>
+    <grid id = "grid">
       <div class ="grid"></div>
    
  <div><image class= "PrincessPeachCute" src="./assets/images/PrincessPeachCute.jpg" alt="PrincessPeach"></image></div>
