--- a/game.html
+++ b/game.html
@@ -67,13 +67,13 @@
       <td>
    <h3>
 
-    <a href=""><button onclick="Buttontoggle()" id="playButton" type="button" class="btn btn-default btn-xs">
+    <a href=""><button onclick="playButton()" id="gameButton" type="button" class="btn btn-default btn-xs">
         Play
         <span class="glyphicon glyphicon-pause"></span>
         <!-- <span class="glyphicon glyphicon-play"></span> -->
       </button></a>
 
-    <a href=""><button onclick="Buttontoggle()" id="playButton" type="Button" class="btn btn-default btn-xs">
+    <a href=""><button onclick="pauseButton()" id="gameButton" type="Button" class="btn btn-default btn-xs">
       Pause
         <span class="glyphicon glyphicon-pause"></span>
       </button></a>
