--- a/game.html
+++ b/game.html
@@ -67,16 +67,16 @@
       <td>
    <h3>
 
-    <a href=""><button onclick="playButton()" id="gameButton" type="button" class="btn btn-default btn-xs">
+    <button onclick="playButton()" id="gameButton" type="button" class="btn btn-default btn-xs">
         Play
         <span class="glyphicon glyphicon-pause"></span>
         <!-- <span class="glyphicon glyphicon-play"></span> -->
-      </button></a>
+      </button>
 
-    <a href=""><button onclick="pauseButton()" id="gameButton" type="Button" class="btn btn-default btn-xs">
+    <button onclick="pauseButton()" id="gameButton" type="Button" class="btn btn-default btn-xs">
       Pause
         <span class="glyphicon glyphicon-pause"></span>
-      </button></a>
+      </button>
 
   </h3>
        </td>
