--- a/game.html
+++ b/game.html
@@ -45,7 +45,7 @@
 
 
    <body>
-    <grid id = "grid1">
+    <video id = "grid1">
       <div class ="grid"></div>
    
  <div><image class= "PrincessPeachCute" src="./assets/images/PrincessPeachCute.jpg" alt="PrincessPeach"></image></div>
@@ -82,7 +82,7 @@
        </td>
      </tr>
  </table> 
-</grid>
+</video>
   </body>
   
   
