--- a/game.html
+++ b/game.html
@@ -23,7 +23,7 @@
 <table>
   <tr>
 <h1><iframe class id="gameMusic" src="https://www.youtube.com/embed/3ijDdxmoiX0?autoplay=1" width="250" height="205" title="YouTube video player" 
-  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></video>
+  frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </h1>
 </tr>
 </table> 
